# CodeNam

./: .gitignore  Cargo.toml  CodeNam.json.example  OAUTH.md  README.md
.github/scripts/: verify_windows_install.ps1
.github/workflows/: ci.yml  ios-testflight.yml  release.yml
crates/jcode-app-core/: Cargo.toml
crates/jcode-app-core/src/: agent.rs  agent_tests.rs  server.rs
crates/jcode-base/: Cargo.toml
crates/jcode-base/src/: claude_live.rs  config.rs  config_tests.rs  import.rs  lib.rs  memory.rs  power_inhibit.rs  prompt.rs  safety.rs  session.rs  skill.rs  subscription_api.rs
crates/jcode-config-types/src/: lib.rs
crates/jcode-desktop/src/: desktop_profiling.rs  desktop_reload.rs  main.rs  (+4 more)
crates/jcode-permission/: Cargo.toml
crates/jcode-permission/src/: lib.rs
crates/jcode-provider-anthropic-runtime/: Cargo.toml
crates/jcode-provider-copilot-runtime/: Cargo.toml
docs/: HARNESS_ORCHESTRATION.md  RETENTION_READINESS.md  SPONSORED_DISCOVERY_SPONSOR_ONBOARDING.md
ios/: PRODUCTION_CHECKLIST.md
ios/TestHarness/: README.md  check_production.sh  mock_gateway.py  protocol_smoke_test.py
scripts/: code_size_budget.json  dev_cargo.sh  install.ps1  install_local.cmd  install_local.ps1  swallowed_error_budget.json  test_size_budget.json  test_windows_launcher_install.ps1  test_windows_setup_evaluation.ps1  uninstall.ps1
src/cli/: args.rs  commands.rs  commands_tests.rs  startup.rs  terminal.rs
telemetry-worker/: README.md  wrangler.toml
telemetry-worker/src/: worker.js
telemetry-worker/test/: worker.test.mjs
tests/e2e/: burst_spawn.rs
(+163 files in other folders)
