[package]
name = "jcode-permission"
version = "0.1.0"
edition = "2024"
publish = false
description = "Lightweight permission ruleset + agent profiles for the jcode harness"

[lib]
name = "jcode_permission"
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
